2013-12-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Added read-only support for the 4 MB Flash MegaCart mapping.


2013-12-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Added support for the MegaMax 2 MB cartridge mapping. Developers
  of The!Cart confirmed that the CART ID for the 64MB variant is not needed, so
  I've reused it.


2013-11-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac, atari.c, platform.h, atari_ps2.c, sdl/main.c : Minimal cleanup
  of platform-specific Sleep/Time routines.


2013-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fixed & updated symbols based on OS & BASIC source listings.


2013-11-09  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/cart.txt: By request of the developers of The!Cart, reserved two IDs
  for this new cartridge type.


2013-05-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/INSTALL: Update NestedVM build manual - it doesn't build with
  --enable-ide.
* javanvm/atari_javanvm.c: Fix overflow of dsp_buffer - could happen on some
  systems where JAVANVM_SoundAvailable sometimes returns value larger than
  2*line_buffer_size.
* DOC/INSTALL, configure.ac, Makefile.in, javanvm/atari_javanvm.[ch],
  javanvm/input.[ch], javanvm/javanvm.h, javanvm/main.c, javanvm/sound.c,
  javanvm/video.[ch]: Code cleanup - split atari_javanvm.c to separate modules
  for video, sound and input. Merge javanvm and javanvm-basic targets into the
  default target - NestedVM host is now autodetected.


2013-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* Makefile.in: Use printf instead of echo -e - more portable (and -e didn't
  work on GNU Make 3.81).


2013-04-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* artifact.[ch], atari.c, atari800.man, cfg.c, configure.ac,
  pal_blending.[ch], ui.c, videomode.[ch], sdl/video_gl.c, sdl/video.sw.c,