@@ -47,71 +47,71 @@
 
 /* #define DEBUG 1 */
 
-int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1] = {
+int const CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1] = {
 	0,
-	8,    /* CARTRIDGE_STD_8 */
-	16,   /* CARTRIDGE_STD_16 */
-	16,   /* CARTRIDGE_OSS_034M_16 */
-	32,   /* CARTRIDGE_5200_32 */
-	32,   /* CARTRIDGE_DB_32 */
-	16,   /* CARTRIDGE_5200_EE_16 */
-	40,   /* CARTRIDGE_5200_40 */
-	64,   /* CARTRIDGE_WILL_64 */
-	64,   /* CARTRIDGE_EXP_64 */
-	64,   /* CARTRIDGE_DIAMOND_64 */
-	64,   /* CARTRIDGE_SDX_64 */
-	32,   /* CARTRIDGE_XEGS_32 */
-	64,   /* CARTRIDGE_XEGS_64 */
-	128,  /* CARTRIDGE_XEGS_128 */
-	16,   /* CARTRIDGE_OSS_M091_16 */
-	16,   /* CARTRIDGE_5200_NS_16 */
-	128,  /* CARTRIDGE_ATRAX_128 */
-	40,   /* CARTRIDGE_BBSB_40 */
-	8,    /* CARTRIDGE_5200_8 */
-	4,    /* CARTRIDGE_5200_4 */
-	8,    /* CARTRIDGE_RIGHT_8 */
-	32,   /* CARTRIDGE_WILL_32 */
-	256,  /* CARTRIDGE_XEGS_256 */
-	512,  /* CARTRIDGE_XEGS_512 */
-	1024, /* CARTRIDGE_XEGS_1024 */
-	16,   /* CARTRIDGE_MEGA_16 */
-	32,   /* CARTRIDGE_MEGA_32 */
-	64,   /* CARTRIDGE_MEGA_64 */
-	128,  /* CARTRIDGE_MEGA_128 */
-	256,  /* CARTRIDGE_MEGA_256 */
-	512,  /* CARTRIDGE_MEGA_512 */
-	1024, /* CARTRIDGE_MEGA_1024 */
-	32,   /* CARTRIDGE_SWXEGS_32 */
-	64,   /* CARTRIDGE_SWXEGS_64 */
-	128,  /* CARTRIDGE_SWXEGS_128 */
-	256,  /* CARTRIDGE_SWXEGS_256 */
-	512,  /* CARTRIDGE_SWXEGS_512 */
-	1024, /* CARTRIDGE_SWXEGS_1024 */
-	8,    /* CARTRIDGE_PHOENIX_8 */
-	16,   /* CARTRIDGE_BLIZZARD_16 */
-	128,  /* CARTRIDGE_ATMAX_128 */
-	1024, /* CARTRIDGE_ATMAX_1024 */
-	128,  /* CARTRIDGE_SDX_128 */
-	8,    /* CARTRIDGE_OSS_8 */
-	16,   /* CARTRIDGE_OSS_043M_16 */
-	4,    /* CARTRIDGE_BLIZZARD_4 */
-	32,   /* CARTRIDGE_AST_32 */
-	64,   /* CARTRIDGE_ATRAX_SDX_64 */
-	128,  /* CARTRIDGE_ATRAX_SDX_128 */
-	64,   /* CARTRIDGE_TURBOSOFT_64 */
-	128,  /* CARTRIDGE_TURBOSOFT_128 */
-	32,   /* CARTRIDGE_ULTRACART_32 */
-	8,    /* CARTRIDGE_LOW_BANK_8 */
-	128,  /* CARTRIDGE_SIC_128 */
-	256,  /* CARTRIDGE_SIC_256 */
-	512,  /* CARTRIDGE_SIC_512 */
-	2,    /* CARTRIDGE_STD_2 */
-	4,    /* CARTRIDGE_STD_4 */
-	4,    /* CARTRIDGE_RIGHT_4 */
-	32,   /* CARTRIDGE_TURBO_HIT_32 */
-	2048, /* CARTRIDGE_MEGA_2048 */
-	-1,   /* CARTRIDGE_THECART_128M, should be 128*1024 but not supported yet */
-	4096  /* CARTRIDGE_MEGA_4096 */
+	8,        /* CARTRIDGE_STD_8 */
+	16,       /* CARTRIDGE_STD_16 */
+	16,       /* CARTRIDGE_OSS_034M_16 */
+	32,       /* CARTRIDGE_5200_32 */
+	32,       /* CARTRIDGE_DB_32 */
+	16,       /* CARTRIDGE_5200_EE_16 */
+	40,       /* CARTRIDGE_5200_40 */
+	64,       /* CARTRIDGE_WILL_64 */
+	64,       /* CARTRIDGE_EXP_64 */
+	64,       /* CARTRIDGE_DIAMOND_64 */
+	64,       /* CARTRIDGE_SDX_64 */
+	32,       /* CARTRIDGE_XEGS_32 */
+	64,       /* CARTRIDGE_XEGS_64 */
+	128,      /* CARTRIDGE_XEGS_128 */
+	16,       /* CARTRIDGE_OSS_M091_16 */
+	16,       /* CARTRIDGE_5200_NS_16 */
+	128,      /* CARTRIDGE_ATRAX_128 */
+	40,       /* CARTRIDGE_BBSB_40 */
+	8,        /* CARTRIDGE_5200_8 */
+	4,        /* CARTRIDGE_5200_4 */
+	8,        /* CARTRIDGE_RIGHT_8 */
+	32,       /* CARTRIDGE_WILL_32 */
+	256,      /* CARTRIDGE_XEGS_256 */
+	512,      /* CARTRIDGE_XEGS_512 */
+	1024,     /* CARTRIDGE_XEGS_1024 */
+	16,       /* CARTRIDGE_MEGA_16 */
+	32,       /* CARTRIDGE_MEGA_32 */
+	64,       /* CARTRIDGE_MEGA_64 */
+	128,      /* CARTRIDGE_MEGA_128 */
+	256,      /* CARTRIDGE_MEGA_256 */
+	512,      /* CARTRIDGE_MEGA_512 */
+	1024,     /* CARTRIDGE_MEGA_1024 */
+	32,       /* CARTRIDGE_SWXEGS_32 */
+	64,       /* CARTRIDGE_SWXEGS_64 */
+	128,      /* CARTRIDGE_SWXEGS_128 */
+	256,      /* CARTRIDGE_SWXEGS_256 */
+	512,      /* CARTRIDGE_SWXEGS_512 */
+	1024,     /* CARTRIDGE_SWXEGS_1024 */
+	8,        /* CARTRIDGE_PHOENIX_8 */
+	16,       /* CARTRIDGE_BLIZZARD_16 */
+	128,      /* CARTRIDGE_ATMAX_128 */
+	1024,     /* CARTRIDGE_ATMAX_1024 */
+	128,      /* CARTRIDGE_SDX_128 */
+	8,        /* CARTRIDGE_OSS_8 */
+	16,       /* CARTRIDGE_OSS_043M_16 */
+	4,        /* CARTRIDGE_BLIZZARD_4 */
+	32,       /* CARTRIDGE_AST_32 */
+	64,       /* CARTRIDGE_ATRAX_SDX_64 */
+	128,      /* CARTRIDGE_ATRAX_SDX_128 */
+	64,       /* CARTRIDGE_TURBOSOFT_64 */
+	128,      /* CARTRIDGE_TURBOSOFT_128 */
+	32,       /* CARTRIDGE_ULTRACART_32 */
+	8,        /* CARTRIDGE_LOW_BANK_8 */
+	128,      /* CARTRIDGE_SIC_128 */
+	256,      /* CARTRIDGE_SIC_256 */
+	512,      /* CARTRIDGE_SIC_512 */
+	2,        /* CARTRIDGE_STD_2 */
+	4,        /* CARTRIDGE_STD_4 */
+	4,        /* CARTRIDGE_RIGHT_4 */
+	32,       /* CARTRIDGE_TURBO_HIT_32 */
+	2048,     /* CARTRIDGE_MEGA_2048 */
+	128*1024, /* CARTRIDGE_THECART_128M */
+	4096      /* CARTRIDGE_MEGA_4096 */
 };
 
 int CARTRIDGE_autoreboot = TRUE;
@@ -182,7 +182,7 @@ static void set_bank_A0AF(int main, int old_state)
 
 /* WILL_64, EXP_64, DIAMOND_64, SDX_64, WILL_32, ATMAX_128, ATMAX_1024,
    ATRAX_128, ATRAX_SDX_64, TURBOSOFT_64, TURBOSOFT_128, ULTRACART_32,
-   TURBO_HIT_32 */
+   TURBO_HIT_32, THECART_128M */
 static void set_bank_A0BF(int n)
 {
 	if (active_cart->state & n)
@@ -354,6 +354,9 @@ static void SwitchBank(int old_state)
 	case CARTRIDGE_MEGA_4096:
 		set_bank_MEGA_4096();
 		break;
+	case CARTRIDGE_THECART_128M:
+		set_bank_A0BF(0x4000);
+		break;
 	}
 #if DEBUG
 	if (old_state != active_cart->state)
@@ -482,6 +485,7 @@ static void MapActiveCart(void)
 		case CARTRIDGE_TURBOSOFT_128:
 		case CARTRIDGE_ULTRACART_32:
 		case CARTRIDGE_BLIZZARD_32:
+		case CARTRIDGE_THECART_128M:
 			MEMORY_Cart809fDisable();
 			break;
 		case CARTRIDGE_DB_32:
@@ -880,6 +884,16 @@ static UBYTE GetByte(CARTRIDGE_image_t *cart, UWORD addr, int no_side_effects)
 		if ((addr & 0xe0) == 0x00)
 			return cart->state;
 		break;
+	case CARTRIDGE_THECART_128M:
+		switch (addr) {
+		case 0xd5a0:
+			return cart->state & 0x00ff;
+		case 0xd5a1:
+			return (cart->state & 0x3f00) >> 8;
+		case 0xd5a2:
+			return (~cart->state & 0x4000) >> 14;
+		}
+		break;
 	}
 	return 0xff;
 }
@@ -955,6 +969,19 @@ static void PutByte(CARTRIDGE_image_t *cart, UWORD addr, UBYTE byte)
 		/* Only react to access to $D50x/$D51x. */
 		if ((addr & 0xe0) == 0x00)
 			new_state = byte;
+		break;
+	case CARTRIDGE_THECART_128M:
+		switch (addr) {
+		case 0xd5a0:
+			new_state = (old_state & 0x7f00) | byte;
+			break;
+		case 0xd5a1:
+			new_state = (old_state & 0x40ff) | ((byte & 0x3f) << 8);
+			break;
+		case 0xd5a2:
+			new_state = (old_state & 0x3fff) | ((~byte % 0x01) << 14);
+			break;
+		}
 		break;
 	default:
 		/* Check types switchable by access to page D5. */
